--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                  <object data="public/images/logo.svg" type="image/svg+xml" alt="Skendleby Films"></object>
             </div>
             <div class="content-text">
-                <a href="mailto:info@skendlebyfilms.com">
-                    info@skendlebyfilms.com
+                <a href="mailto:contact@skendlebyfilms.com">
+                    contact@skendlebyfilms.com
                 </a>
             </div>
         </div>
