--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@
     <div class="landing-container">
         <div class="content">
             <div class="logo">
-                 <object data="public/images/logo.svg" type="image/svg+xml" alt="Skendleby Films"></object>
+                 <img src="public/images/skendleby-logo.png" alt="Skendleby Films"></object>
             </div>
             <div class="content-text">
-                <a href="mailto:contact@skendlebyfilms.com">
-                    contact@skendlebyfilms.com
-                </a>
+                <p>Skendleby Films is a new production company founded in 2015.</p>
+                <p>Email: <a href="mailto:contact@skendlebyfilms.com">contact@skendlebyfilms.com</a></p>
             </div>
         </div>
 
